fix: rotate mobile TOC arrow at collapse start

--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -155,7 +155,7 @@
         border-radius: var(--card-border-radius);
         box-shadow: var(--shadow-l2);
 
-        &[open] {
+        &[open]:not(.toc-collapsing) {
             .article-toc-title {
                 svg {
                     transform: rotate(90deg);
